added CSS for cards to be centered and added example of JSX button elements

--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,9 @@ code {
   justify-content: center;
   margin: auto;
 }
+
+#cards {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+}
