added class to component divs to avoid side nav

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,10 @@ code {
 
 /* ------ ADDED CSS ------ */
 
+.avoid-nav {
+  margin-left: 200px;
+}
+
 #form {
   display: flex;
   justify-content: center;
